--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "UliYearn",
-  "name": "The Ultimate Yearn Optimizer Of Defi",
+  "short_name": "UliBank",
+  "name": "The Ultimate Bank Of Web3",
   "icons": [
     {
       "src": "favicon.ico",
