--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "valtio": "^1.7.0",
     "wagmi": "^0.6.7"
   },
   "scripts": {
