--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ethers": "^5.5.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.0",
     "valtio": "^1.7.0",
     "wagmi": "^0.6.7"
