--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://uli-bank.github.io",
   "dependencies": {
     "@fluentui/react": "^8.59.0",
+    "@rainbow-me/rainbowkit": "^0.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
