--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "UliBank",
-  "name": "The Ultimate Bank Of Web3",
+  "short_name": "XBank",
+  "name": "The X Bank Of Web3",
   "icons": [
     {
       "src": "favicon.ico",
