--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.3",
     "valtio": "^1.7.0",
     "wagmi": "^0.6.7"
   },
