--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.0",
+    "react-use": "^17.4.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3",
     "valtio": "^1.7.0",
